objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Job_Region__c</fullName>
        <description>A case formula based on the job venue country. This was created to produce job reports by the region of the job.
To add a new country add
, &quot;Venue Country Name&quot;, &quot;Region&quot;</description>
        <formula>CASE( Venue_Country__c 
, &quot;Argentina&quot;, &quot;Sth America&quot;
, &quot;Australia&quot;, &quot;Australia/NZ&quot;
, &quot;Austria&quot; , &quot;Europe&quot;
, &quot;Belgium&quot; , &quot;Europe&quot;
, &quot;Brasil&quot;, &quot;Sth America&quot;
, &quot;Brazil&quot;, &quot;Sth America&quot;
, &quot;Canada&quot;, &quot;Nth America&quot;
, &quot;Chile&quot;, &quot;Sth America&quot;
, &quot;China&quot;, &quot;Asia&quot;
, &quot;Colombia&quot;, &quot;Sth America&quot;
, &quot;Croatia&quot;, &quot;Europe&quot;
, &quot;Czech Republic&quot; , &quot;Europe&quot;
, &quot;Democratic Republic of the Congo&quot;, &quot;Africa&quot;
, &quot;Denmark&quot; , &quot;Europe&quot;
, &quot;Egypt&quot;, &quot;Africa&quot;
, &quot;England&quot; , &quot;Europe&quot;
, &quot;Estonia&quot; , &quot;Europe&quot;
, &quot;Finland&quot; , &quot;Europe&quot;
, &quot;France&quot; , &quot;Europe&quot;
, &quot;Germany&quot; , &quot;Europe&quot;
, &quot;Greece&quot; , &quot;Europe&quot;
, &quot;Hong Kong&quot; , &quot;Asia&quot;
, &quot;Hungary&quot; , &quot;Europe&quot;
,&quot;Iceland&quot; , &quot;Europe&quot;
,&quot;India&quot; , &quot;Asia&quot;
,&quot;Indonesia&quot; , &quot;Asia&quot;
,&quot;Ireland&quot; , &quot;Europe&quot;
,&quot;Italy&quot; , &quot;Europe&quot;
,&quot;Japan&quot; , &quot;Asia&quot;
,&quot;Korea&quot; , &quot;Asia&quot;
,&quot;Laos&quot; , &quot;Asia&quot;
,&quot;Latvia&quot; , &quot;Europe&quot;
,&quot;Macau&quot; , &quot;Asia&quot;
,&quot;Malaysia&quot; , &quot;Asia&quot;
,&quot;Malta&quot; , &quot;Europe&quot;
,&quot;Mexico&quot;, &quot;Sth America&quot;
,&quot;Monaco&quot; , &quot;Europe&quot;
,&quot;Mongolia&quot; , &quot;Asia&quot;
,&quot;Mozambique&quot;, &quot;Africa&quot;
,&quot;Namibia&quot;, &quot;Africa&quot;
,&quot;New Zealand&quot; , &quot;Australia/NZ&quot;
,&quot;Nigeria&quot;, &quot;Africa&quot;
,&quot;Norway&quot; , &quot;Europe&quot;
,&quot;Panama&quot;, &quot;Sth America&quot;
, &quot;Pakistan&quot; , &quot;Asia&quot;
, &quot;Papua New Guinea&quot; , &quot;Asia&quot;
, &quot;Peru&quot;, &quot;Sth America&quot;
, &quot;Philippines&quot; , &quot;Asia&quot;
, &quot;Poland&quot; , &quot;Europe&quot;
, &quot;Portugal&quot; , &quot;Europe&quot;
, &quot;Russia&quot; , &quot;Europe&quot;
, &quot;Singapore&quot; , &quot;Asia&quot;
, &quot;South Africa&quot;, &quot;Africa&quot;
, &quot;Spain&quot; , &quot;Europe&quot;
, &quot;Sri Lanka&quot; , &quot;Asia&quot;
, &quot;Sth Africa&quot;, &quot;Africa&quot;
, &quot;Sweden&quot; , &quot;Europe&quot;
, &quot;Switzerland&quot; , &quot;Europe&quot;
, &quot;Taiwan&quot; , &quot;Asia&quot;
, &quot;Thailand&quot; , &quot;Asia&quot;
, &quot;The Netherlands&quot; , &quot;Europe&quot;
, &quot;Turkey&quot; , &quot;Europe&quot;
, &quot;UK&quot; , &quot;Europe&quot;
, &quot;United Arab Emirates&quot; , &quot;Asia&quot;
, &quot;United Kingdom&quot; , &quot;Europe&quot;
, &quot;USA&quot; , &quot;Nth America&quot;
, &quot;Vietnam&quot; , &quot;Asia&quot;
, &quot;Zambia&quot;, &quot;Africa&quot;
, &quot;Zimbabwe&quot;, &quot;Africa&quot;
,&quot;Korea&quot;,&quot;Asia&quot;
,&quot;Madagascar&quot;,&quot;Africa&quot;
,&quot;Qatar&quot;,&quot;Asia&quot;
, &quot;ERROR&quot;)</formula>
        <inlineHelpText>Regions include Australia/NZ, Nth America, Sth America, Asia, Europe, &amp; Africa.
If the field has ERROR, the formula needs to be updated to include the venue country</inlineHelpText>
        <label>Job Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date_Calendar_Year__c</fullName>
        <formula>TEXT(YEAR(  Job_First_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Start Date Calendar Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_This_Cyear_AUD_S__c</fullName>
        <label>Job This_Cyear AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_This_Fyear_AUD_S__c</fullName>
        <label>Job This_Fyear AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_This_Month_AUD_S__c</fullName>
        <label>Job This_Month AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_This_Qtr_AUD_S__c</fullName>
        <label>Job This_Qtr AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Retainer</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_emails_checked_and_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you have checked the scheduled dates and added your custom content for your job emails and are happy for them to be sent check this box.</inlineHelpText>
        <label>Job emails checked and ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_emails_created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Job emails created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_first_date_YearMth_as_Number__c</fullName>
        <formula>TEXT(YEAR( Job_First_Date__c) ) 
&amp; IF (MONTH(Job_First_Date__c ) &lt;10,&quot;0&quot;,&quot;&quot;) 
&amp; TEXT(MONTH(Job_First_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job first date YearMth as Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOE_template__c</fullName>
        <formula>IF(CONTAINS(Opportunity_and_Job_sub_type__c,&quot;Retainer&quot;),&quot;a1G1r000004Gvxj&quot;,
  IF(CONTAINS(Opportunity_and_Job_sub_type__c,&quot;Consulting&quot;),&quot;a1G1r000004Gvxo&quot;,
    IF(CONTAINS(Opportunity_and_Job_sub_type__c,&quot;WLD&quot;),&quot;a1G1r000004Gvxt&quot;,&quot;a1G1r000002tlLn&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOE template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_code__c</fullName>
        <formula>LOWER(LEFT(TEXT(Language__c),3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Participants_Update_On__c</fullName>
        <description>Used to save last participants update time.</description>
        <inlineHelpText>This is the date/time that the participant details were copied to the relevant contacts using the Email Participants link.</inlineHelpText>
        <label>Last Participants Update On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Learning_Outcomes__c</fullName>
        <description>Learning outcomes to include in welcome pack</description>
        <inlineHelpText>Learning outcomes to include in welcome pack
Open Courses
Level 1 = professional-negotiation
Level 2 = strategic-negotiation
Level 3 = expert-negotiation</inlineHelpText>
        <label>Learning Outcomes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/1-day</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/2-day</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/3-day</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/4-day</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/fundamentals-program</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/professional-negotiation</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/strategic-negotiation</fullName>
                </value>
                <value>
                    <fullName>http://www.negotiate.org/learning-outcomes/expert-negotiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_segment_touch__c</fullName>
        <label>List segment touch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_segmentation_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For list segmentation mass update only</description>
        <label>List segmentation updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Materials_Amount__c</fullName>
        <description>[need to consider forex angle]</description>
        <label>Materials Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materials_Invoiced__c</fullName>
        <inlineHelpText>Enter the number of materials invoiced</inlineHelpText>
        <label>Materials Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <inlineHelpText>Enter what materials were used on the job
Manual/Workbook (Language), PFQ, NIP, RAIT, reinforcement emails, 6 week survey, 3 month survey, eLearning</inlineHelpText>
        <label>Materials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Materials_delivery_number_of_boxes__c</fullName>
        <inlineHelpText>How many boxes are in the delivery?</inlineHelpText>
        <label>Delivery, number of boxes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materials_delivery_tracking_number__c</fullName>
        <inlineHelpText>Enter the tracking number for the delivery.</inlineHelpText>
        <label>Delivery tracking number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_Name_Lookup__c</fullName>
        <formula>NAM_Name__r.FirstName &amp; &quot; &quot; &amp; NAM_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAM Name Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For all jobs migrated from FMPro this field will be blank - refer to the &apos;Migration&apos; section to see NAM name as a text field.
For all future jobs this will be a look up field to CONTACTS.</inlineHelpText>
        <label>NAM Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs as NAM</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAM_Name_full_name__c</fullName>
        <formula>NAM_Name__r.FirstName &amp; &quot; &quot; &amp; NAM_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAM Name, full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIP_Due_Date__c</fullName>
        <inlineHelpText>TEXT VERSION OF Date NIP is due, Text to appear on welcome pack</inlineHelpText>
        <label>NIP Due Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_URL__c</fullName>
        <formula>NIP_Survey__r.URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIP Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIP_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NIP Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Jobs with NIP Survey</relationshipLabel>
        <relationshipName>Jobs_with_NIP_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_due_date__c</fullName>
        <inlineHelpText>This date will be set automatically as 7 days prior to training starts.</inlineHelpText>
        <label>NIP Survey due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only. To indicate to Pardot that an NIP survey is required.</inlineHelpText>
        <label>NIP Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_job_email_scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>NIP Survey job email scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication of new clients. New clients are considered
the first job with a new company
new division with a new NAM
2 years since the last job for the account</description>
        <inlineHelpText>Our criteria for a new client/prospect is (this is when you tick the box)
•	the 1st job or the 1st proposal with a company
•	New division with a new NAM
•	2 years since the last job for the account</inlineHelpText>
        <label>New Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Participants__c</fullName>
        <inlineHelpText>Number of participants linked to the job</inlineHelpText>
        <label>Actual no. of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_AUD_Value_Estimate__c</fullName>
        <formula>OPP_FX_Value_Estimate__c /  Billing_X_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPP AUD Value Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPP_AUD_Weighted_Value__c</fullName>
        <formula>OPP_AUD_Value_Estimate__c *  OPP_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPP AUD Weighted Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPP_Comment__c</fullName>
        <inlineHelpText>En</inlineHelpText>
        <label>OPP Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OPP_Date_Created__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Specify the date that this Opportunity was first identified as an Opportunity.</inlineHelpText>
        <label>OPP Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPP_Expected_Work_Start__c</fullName>
        <inlineHelpText>Enter the date when you expect work would start if this Opportunity proceeds to become a Job.</inlineHelpText>
        <label>OPP Expected Work Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPP_FX_Value_Estimate__c</fullName>
        <inlineHelpText>Enter the estimated value (FX) of this Opportunity</inlineHelpText>
        <label>OPP FX Value Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OPP_Likelihood__c</fullName>
        <inlineHelpText>Identify the likelihood that this Opportunity will become a Confirmed Job.</inlineHelpText>
        <label>OPP Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zero</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPP_Next_Action_Date__c</fullName>
        <inlineHelpText>Enter the date (if any) when action should next be taken to progress this Opportunity.</inlineHelpText>
        <label>OPP Next Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPP_Next_Action__c</fullName>
        <inlineHelpText>Enter a short description of the next action to be taken.</inlineHelpText>
        <label>OPP Next Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OPP_Probability__c</fullName>
        <formula>CASE( OPP_Likelihood__c 
           , &quot;Low&quot;, 0.25
           , &quot;Medium&quot;, 0.50
           , &quot;High&quot;, 0.75
           ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPP Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OPP_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identify the person (usually the Seller) who is responsible for managing this Opportunity.</inlineHelpText>
        <label>OPP Responsibility</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Responsibility</relationshipLabel>
        <relationshipName>Jobs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPP_WorkType__c</fullName>
        <inlineHelpText>For this Opportunity, enter what type of work is expected.</inlineHelpText>
        <label>OPP_WorkType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_CDC_Name__c</fullName>
        <description>Migrated for reconciliation.</description>
        <label>Old CDC Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CSC_ID__c</fullName>
        <description>Migrated Person ID of CSC</description>
        <label>Old CSC ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_ID__c</fullName>
        <description>Migrated</description>
        <label>Old Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_Org_Name__c</fullName>
        <description>Migrated - only for reconciliation. Should be able to look up Account Name</description>
        <label>Old Job Org Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_NAM_ID__c</fullName>
        <description>Migrated</description>
        <label>Old NAM Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Org_ID__c</fullName>
        <description>Migrated</description>
        <label>Old Org ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_course_program_name__c</fullName>
        <label>Open course program name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Negotiation - Level 1</fullName>
                    <label>Professional Negotiation - Module 1</label>
                </value>
                <value>
                    <fullName>Strategic Negotiation - Level 2</fullName>
                    <label>Strategic Negotiation - Module 2</label>
                </value>
                <value>
                    <fullName>Expert Negotiation - Level 3</fullName>
                    <label>Expert Negotiation - Module 3</label>
                </value>
                <value>
                    <fullName>Refresher</fullName>
                </value>
                <value>
                    <fullName>Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren</fullName>
                </value>
                <value>
                    <fullName>Negotiation Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Negotiation Preparation</fullName>
                </value>
                <value>
                    <fullName>Negotiation Tactics</fullName>
                </value>
                <value>
                    <fullName>Concessions &amp; Deadlocks</fullName>
                </value>
                <value>
                    <fullName>Stakeholder Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_course_timetable__c</fullName>
        <defaultValue>&quot;0830 - 0845 Coffee/Tea — Meet and greet&quot;
&amp; BR() &amp; &quot;0845 - 1030 Morning session&quot;
&amp; BR() &amp; &quot;1030 - 1045 Coffee/Tea break&quot;
&amp; BR() &amp; &quot;1045 - 1230 Morning session continues&quot;
&amp; BR() &amp; &quot;1230 - 1330 Lunch&quot;
&amp; BR() &amp; &quot;1330 - 1530 Afternoon session&quot;
&amp; BR() &amp; &quot;1530 - 1545 Coffee/Tea break&quot;
&amp; BR() &amp; &quot;1545 - 1715 Afternoon session continues&quot;</defaultValue>
        <label>Open course timetable</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_and_Job_sub_type__c</fullName>
        <inlineHelpText>Opportunity sub-type defined at Opportunity</inlineHelpText>
        <label>Opportunity and Job sub-type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_and_job_type__c</fullName>
        <inlineHelpText>Opportunity type defined at Opportunity</inlineHelpText>
        <label>Opportunity and job type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_migrated_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The ID of the Opportunity that this Job has been migrated to.</inlineHelpText>
        <label>Opportunity, migrated to</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jobs migrated from</relationshipLabel>
        <relationshipName>Jobs_migrated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_record_type__c</fullName>
        <label>Opportunity record type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_email__c</fullName>
        <label>Owner email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_name__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Owner name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFQ_Due_Date__c</fullName>
        <inlineHelpText>TEXT VERSION OF Date PFQ is due, text to appear on welcome pack email</inlineHelpText>
        <label>PFQ Due Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey_URL__c</fullName>
        <formula>PFQ_Survey__r.URL__c &amp; &quot;-&quot; &amp; LOWER(LEFT(TEXT(Language__c),3)) &amp; &quot;?lan=&quot; &amp; LOWER(LEFT(TEXT(Language__c),3)) &amp; IF(Inc_RAIT_PFQ__c,&quot;&amp;rait=TRUE&quot;,&quot;&amp;rait=FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PFQ Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PFQ Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Survey__c.Legacy__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Survey__c.Survey_Type__c</field>
                <operation>equals</operation>
                <value>PFQ</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Jobs with PFQ survey</relationshipLabel>
        <relationshipName>PFQ_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey_due_date__c</fullName>
        <inlineHelpText>This date will be set automatically as 7 days prior to training starts.</inlineHelpText>
        <label>PFQ Survey due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only field. To indicate to Pardot that a PFQ survey is included for this Job.</inlineHelpText>
        <label>PFQ Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey_job_email_scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>PFQ Survey job email scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFQ_and_NIP_included__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>(deprecated) PFQ and NIP included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PFQ_and_NIP_included</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peer_Review_Survey_URL__c</fullName>
        <formula>Peer_Review_Survey__r.URL__c &amp; &quot;?self=FALSE&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peer Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peer Review Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Jobs with peer review survey</relationshipLabel>
        <relationshipName>Peer_Review_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_Self_Review_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>tick the box once you have received the presenter/s completed peer review forms. Remember to save the form to the Network folder and send to the Network Manager</inlineHelpText>
        <label>Peer/Self Review Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates who performed quality check</description>
        <inlineHelpText>Indicates who performed quality check. Name must be in Salesforce as Contact.</inlineHelpText>
        <label>Performed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs (Performed By)</relationshipLabel>
        <relationshipName>Jobs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Negotiation_Review__c</fullName>
        <inlineHelpText>Add date once post neg. review doc is returned</inlineHelpText>
        <label>Post Negotiation Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_RAIT_Survey_URL__c</fullName>
        <formula>Post_RAIT_Survey__r.URL__c &amp; &quot;-&quot; &amp; LOWER(LEFT(TEXT(Language__c),3)) &amp; &quot;?stage=Post&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post RAIT Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_RAIT_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post RAIT Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Jobs with post RAIT survey</relationshipLabel>
        <relationshipName>Post_RAIT_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postponed_Date__c</fullName>
        <label>Postponed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presenter_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Updated by a trigger on Job Role and used by a cross-object formula on Response. (GE 7/2/2013)</description>
        <inlineHelpText>Lookup to the job role for presenter 1.</inlineHelpText>
        <label>Presenter 1</label>
        <referenceTo>Job_Role__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenter_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Updated by a trigger on Job Role and used by a cross-object formula on Response. (GE 7/2/2013)</inlineHelpText>
        <label>Presenter 2</label>
        <referenceTo>Job_Role__c</referenceTo>
        <relationshipLabel>Jobs (Presenter 2)</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenter_Confirmed_Date__c</fullName>
        <inlineHelpText>date the presenter is confirmed for an open course</inlineHelpText>
        <label>Presenter Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presenter_Expeneses_FX__c</fullName>
        <inlineHelpText>Enter the value of the cost of Presenter Expenses for Public Programs in FX</inlineHelpText>
        <label>Presenter Expeneses FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter_Expenses__c</fullName>
        <inlineHelpText>Enter the value of the cost of Presenter Expenses for Public Programs in AUD</inlineHelpText>
        <label>Presenter Expenses AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Presenters__c</fullName>
        <description>Comma delimited list of Presenters Names as rolled up from Job Roles.</description>
        <inlineHelpText>Presenters names should be rolled up from Job Roles (you don&apos;t need to enter the names)</inlineHelpText>
        <label>Presenters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenters_email__c</fullName>
        <formula>Presenter_1__r.Contact_Email__c + &quot; &quot; +  Presenter_2__r.Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenters email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Duration__c</fullName>
        <inlineHelpText>Select the number of training days.
This appears on the certificate</inlineHelpText>
        <label>Program Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>one-day</fullName>
                </value>
                <value>
                    <fullName>two-day</fullName>
                </value>
                <value>
                    <fullName>three-day</fullName>
                </value>
                <value>
                    <fullName>four-day</fullName>
                </value>
                <value>
                    <fullName>five-day</fullName>
                </value>
                <value>
                    <fullName>1.5 day</fullName>
                </value>
                <value>
                    <fullName>2.5 day</fullName>
                </value>
                <value>
                    <fullName>0.5 day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>